syntax = "proto3";
package api;


service Api {
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse) {}
  rpc CreateReport(CreateReportRequest) returns (CreateReportResponse) {}
}

message GetHealthRequest {
}

enum HealthStatus {
  UNHEALTHY = 0;
  OK = 1;
}

message HealthCheckResponse {
  string label = 1;
  HealthStatus status = 2;
  string result = 3;
}

message GetHealthResponse {
  string version = 1;
  repeated HealthCheckResponse statuses = 2;
}

message CreateReportRequest {
  int32 month = 1;
  string namespace = 2;
  string account_id = 3;
  string spreadsheet_id = 4;
}

message CreateReportResponse {
  string result = 1;
  // NEXT =  2
}


